<resources>
    <string name="app_name">Inventory</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="icon_of_an_empty_shelf">Icon of an empty shelf</string>
    <string name="product_list_is_empty">Product list is empty.</string>
    <string name="add_first_one">Add first one.</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="order">Order</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="wrong_data_provided">Please provide all information about product</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="yes_button">Yes</string>
    <string name="keep_editing_button">Keep editing</string>
    <string name="deletion_prompt">Do you want to delete this product?</string>
    <string name="delete_confirm">Delete</string>
    <string name="cancel_deletion">Cancel</string>
    <string name="on_delete_success">Deleting was successful.</string>
    <string name="on_delete_failure">Deletion failed.</string>
    <string name="add_product_title">Add product</string>
    <string name="edit_product_title">Edit product</string>
</resources>
